# web_demo

./: .gitmodules  README.md  package.json
examples/axum_demo/: .env.example  .gitignore  Cargo.toml  README.md
examples/axum_demo/src/: main.rs
examples/axum_demo/src/apps/: mod.rs
examples/axum_demo/src/apps/note/: router.rs
examples/axum_demo/src/learn/: _01_variables_and_types.rs  _02_constants_and_static.rs  _03_basic_operators.rs  _04_control_flow.rs  _05_functions.rs  _21_ownership_basics.rs  _23_borrowing.rs  _41_structs.rs  _42_enums.rs  _61_error_handling.rs  _84_async_basics.rs  _88_web_server.rs  mod.rs
examples/elysia_demo/: .env.example  .http  CHAT_README.md  drizzle.config.ts  package.json
examples/fastapi_demo/: main.py  package.json  readme.md  requirements.txt
examples/gin_demo/: go.mod  go.sum  main.go  readme.md
examples/hono_demo/: .http  package.json  tsconfig.json  wrangler.jsonc
examples/html_demo/: index.html
examples/lib_demo/: middleware.ts  swagger.css
examples/my-tanstack-app/: package.json
examples/next-bun/: next.config.ts  package.json
examples/nextjs/: README.md  biome.json  package.json
examples/nextjs-demo/: README.md  drizzle.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
examples/nextjs-hono/: .env.example  .gitignore  biome.json
examples/nuxt_demo/: nuxt.config.ts  package.json
examples/partykit/: biome.json  package.json  partykit.json
examples/spring_demo/: .dockerignore  Dockerfile  build.gradle  gradle.properties  settings.gradle
examples/svelte_demo/: package.json
(+449 files in other folders)
